# opna-bot

./: Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml
app/: constants.py  types.py  ui.py
app/cogs/: misc.py  voice.py
app/core/: bot.py  command_tree.py  embeds.py  error_handler.py  settings.py
app/db/: conn.py  models.py
app/utils/: logging.py  misc.py
migrations/: 0001_initial.py
