[project]
name = "app-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.12.1",
    "discord-py[speed]>=2.7.1",
    "jishaku>=2.6.3",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "tortoise-orm[asyncpg]>=1.1.7",
]

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"

[tool.tortoise]
tortoise_orm = "app.db.conn.TORTOISE_ORM"
